web-infras/parser/tests/fixtures/babel/core/uncategorised/491/output.txt
[SyntaxError]: unexpect keyword in strict mode (1,11)
1|(function package() {'use strict'; })()
 |         ^
[SyntaxError]: unexpect keyword in strict mode (1,11)
1|(function package() {'use strict'; })()
 |         ^
